--- a/magic.css
+++ b/magic.css
@@ -1,5 +1,5 @@
-#grad {
-    background-image:linear-gradient(to bottom right, black, #36454F)
+#bg-grad {
+    background-image:linear-gradient(45deg, black, #36454F)
 }
 
 #center {
