--- a/magic.css
+++ b/magic.css
@@ -1,7 +1,10 @@
 #bg-grad {
-    background-image:linear-gradient(45deg, black, #36454F)
+    background-image:linear-gradient(45deg, black, #36454F);
+    width: 1920px;
+    height:1080px;
 }
 
-#center {
-    text-align: center;
+#text {
+    color:white;
+    font-family:"Courier New";
 }
