--- a/magic.css
+++ b/magic.css
@@ -6,46 +6,84 @@ div {
     white-space: pre-wrap;
 }
 
-@font-face{
+/* JetBrains Mono as font */
+
+@font-face {
     font-family: 'JetBrainsMono';
     src: url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/web/woff2/JetBrainsMono-Regular.woff2') format('woff2'),
       url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/web/woff/JetBrainsMono-Regular.woff') format('woff'),
       url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/ttf/JetBrainsMono-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-  }
+}
+
+/* background styling */
 
 .bg-grad {
-    background-image: linear-gradient(45deg, black, #36454F);
+    background-image: linear-gradient(45deg, black, #252522);
     background-attachment: fixed;
     width: auto;
     height: 100%;
 }
 
+/* trident ASCII art styling */
+
 .trident {
     color: white;
     font-family: "JetBrainsMono";
     white-space: pre;
+    text-shadow: 5px 5px 5px black;  
 }
+
+.tridentCenter {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    text-align: center;
+    min-height: 95vh;
+}
+
+/* jahrei text styling */
 
 .jahrei {
     color: white;
-    font-family: "JetBrainsMono";    
+    font-family: "JetBrainsMono";
+    text-shadow: 5px 5px 20px black;    
 }
 
-
-.t_center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
+.jahreiPosition {
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 50px;
+    text-align: right;
 }
 
-.j_center {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: float, center;
-    min-height: 100vh;
+/* links text styling */
+
+.links {
+    color: white;
+    font-family: "JetBrainsMono";
+    text-shadow: 5px 5px 20px black;    
+}
+
+.linksPosition {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    text-align: left;
+}
+
+/* animation styling */
+
+@keyframes fadeIn {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+body {
+    animation: fadeIn ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
